run sync thread when execute radosgw-admin data sync run

Fixes: http://tracker.ceph.com/issues/22080
Signed-off-by: lvshanchun <lvshanchun@gmail.com>